# traffic-flow-analysis

./: README.md  Traffic_Flow_Analysis_Report.docx  main.py  pyproject.toml
app/: main.py
models/: congestion_classification_pipeline.joblib  traffic_anomaly_pipeline.joblib  traffic_clustering_pipeline.joblib
notebooks/: DataCleaning.ipynb  EDA.ipynb
notebooks/training/: anomaly_detection.ipynb  congestion_supervised.ipynb  supervised_model_training.ipynb  unsupervised_clustering.ipynb
