[project]
name = "traffic-flow-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
